--- a/src/routes/AuthStyle.scss
+++ b/src/routes/AuthStyle.scss
@@ -68,34 +68,20 @@
         align-items: center;
         
         .iconBtn{
-          width: 80px;
-          height: 80px;
-          border-radius: 50%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color:transparent;
-          margin: 10px;
-          
-          .icon{
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            color: white;
-  
-            &:hover{
-              color:yellowgreen;
-              cursor: pointer;
-              @include transition;
-            }
-          }
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            margin: 10px;
+
         }
+        
       }
       
       
     }
   }
-  .explore {
+  button {
     letter-spacing: 1px;
     background: none;
     color: white;
@@ -141,6 +127,7 @@
       &:after {
         left: 100%;
         width: 70%;
+     
       }
       .icon-right.after:after {
         left: -80px;
@@ -171,14 +158,14 @@
       transform: translate3D(0, -50%, 0);
     }
     &.after:after {
-      left: -250px;
+       
+      left: 0px;
       top: -15px;
       color: black;
       transition: .15s .25s ease left, .5s .05s ease color;
-      
     }
     &.after:before {
-      content: 'click';
+     
       position: absolute;
       left: -230px;
       top: 18px;
@@ -187,6 +174,29 @@
     }
   }
   
+.login{
+    text-transform: uppercase;
+    transition: 0.5s;
+    letter-spacing: 4px;
+    overflow: hidden;
+    margin-right: 50px;
+    filter: hue-rotate(270deg);
+    &:hover{
+        background: #03e9f4;
+        color: #050801;
+        box-shadow: 0 0 5px #03e9f4,
+                    0 0 25px #03e9f4,
+                    0 0 50px #03e9f4,
+                    0 0 200px #03e9f4;
+         -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
+    }
+    
+}
   
   
+  
+
+
+
+
   
