--- a/src/components/tweetStyle.scss
+++ b/src/components/tweetStyle.scss
@@ -27,9 +27,19 @@
         .contents{
             display: flex;
             align-items: center;
+            flex-direction: column;
             justify-content: space-between;
             padding: 10px;
             color: white;
+            .lock{
+                left: 10px;
+            }
+            .roomInfo{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-around;
+            }
             
         }
     }
