--- a/src/routes/AuthStyle.scss
+++ b/src/routes/AuthStyle.scss
@@ -7,6 +7,7 @@
   }
   
   .auth_body{
+    margin-top: 50px;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -16,6 +17,7 @@
     a { text-decoration: none; display: block; }
 
     .form_body{
+     
       color: white;
       display: flex;
       flex-direction: column;
